--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.5",
     "axios": "^1.6.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "spotify-web-api-node": "^5.0.2",
@@ -21,6 +22,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/spotify-web-api-node": "^5.0.11"
   }
 }
